--- a/yaseen3.css
+++ b/yaseen3.css
@@ -81,3 +81,59 @@ h2{
     justify-content: center;
     gap: 70px;
 }
+.ya11{
+    /* border: palevioletred solid 2px; */
+    display: flex;
+    justify-content: center;
+    gap: 70px;
+}
+.ya12{
+    /* border: palevioletred solid 2px; */
+    display: flex;
+    justify-content: center;
+    gap: 70px;
+}
+.ya13{
+    /* border: palevioletred solid 2px; */
+    display: flex;
+    justify-content: center;
+    gap: 70px;
+}
+.ya14{
+    /* border: palevioletred solid 2px; */
+    display: flex;
+    justify-content: center;
+    gap: 70px;
+}
+.ya15{
+    /* border: palevioletred solid 2px; */
+    display: flex;
+    justify-content: center;
+    gap: 70px;
+}
+.ya16{
+    /* border: palevioletred solid 2px; */
+    display: flex;
+    justify-content: center;
+    gap: 70px;
+}
+.ya17{
+    /* border: palevioletred solid 2px; */
+    display: flex;
+    justify-content: center;
+    gap: 70px;
+}
+.ya18{
+    /* border: palevioletred solid 2px; */
+    display: flex;
+    justify-content: center;
+    gap: 70px;
+}
+h3{
+    font-weight: 100;
+    width: 350px;
+    margin: 40px;
+    color: white;
+    font-size: 40px;
+    text-align: center;
+}
